# imgv2

./: LICENSE.md  README.md  meson.build
include/: image_viewer.hpp  main.hpp  native_window.h  nswindow_util.h
src/: image_viewer.cpp  main.cpp  native_window_osx.m  nswindow_util.m
subprojects/: pfd.wrap  sdlit.wrap
subprojects/packagefiles/pfd/: meson.build
